fix: hide scrollbars

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,6 +42,16 @@ body {
   margin: 0;
 }
 
+/* Deleting scrollbars here. */
+* {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+*::-webkit-scrollbar {
+  display: none;
+}
+
 a {
   color: inherit;
   text-decoration: none;
